--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             <p><b>❤️ Delhi ❤️</b></p>
                             <p class="w3-opacity">Delhi City</p>
                             <p>The capital city of India and the heart of India.</p>
-                            <a href="https://www.instagram.com/delhi_city_update/" target="_blank"
+                            <a href="https://www.instagram.com/y_h_india/" target="_blank"
                                 class="w3-button w3-black w3-margin-bottom">Follow</a>
                         </div>
                     </div>
