Beautiful India Update

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <p><b>❤️ Grow With Us ❤️</b></p>
                             <p class="w3-opacity">Jaipur City</p>
                             <p>We are your business growth accelerator.</p>
-                            <a href="https://www.instagram.com/grow_with_us_247/" target="_blank"
+                            <a href="https://www.instagram.com/_beautiful__india_/" target="_blank"
                                 class="w3-button w3-black w3-margin-bottom">Follow</a>
                         </div>
                     </div>
